generator progress