@@ -31,17 +31,17 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.25.0</version>
+            <version>2.25.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.25.0</version>
+            <version>2.25.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.25.0</version>
+            <version>2.25.3</version>
         </dependency>
         <dependency>
             <groupId>tech.ydb.jdbc</groupId>
@@ -101,6 +101,9 @@
                         <version>3.13.0</version>
                         <configuration>
                             <release>21</release>
+                            <compilerArgs>
+                                <arg>-proc:full</arg>
+                            </compilerArgs>
                         </configuration>
                     </plugin>
                     <plugin>
